# arrow-js-ffi

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  package.json  rollup.config.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
src/: ffi.ts  field.ts  index.ts  record-batch.ts  release.ts  schema.ts  table.ts  types.ts  util.ts  vector.ts
src/arrow/: README.md
src/arrow/array/: read.ts
src/arrow/schema/: write.ts
src/ffi/: array.ts  index.ts  schema.ts
src/ffi/array/: index.ts  read.ts  write.ts
src/ffi/schema/: index.ts  read.ts  write.ts
src/nanoarrow/: array.ts  index.ts  schema.ts
tests/: ffi.test.ts  ffi.ts  fixed_size_list.arrow  generate_data.py  index.ts  large_table.arrow  pyarrow_generate_data.py  record-batch.test.ts  release.test.ts  table.arrow  utils.ts  write.test.ts
tests/rust-arrow-ffi/: .gitignore  Cargo.toml  LICENSE_MIT  README.md  package.json
tests/rust-arrow-ffi/src/: error.rs  ffi.rs  ipc.rs  lib.rs  malloc.rs
